# rosa-regional-platform

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Makefile  OWNERS  README.md
.ambient/: README.md
.spec/: README.md
argocd/: README.md
ci/: Containerfile  README-banjo.md  README.md  e2e-tests.sh  ephemeral-resources-janitor.sh  nightly-load-test.sh  nightly-machine-type.sh  nightly.sh  pre-merge.py  run-unit-tests.sh  setup-aws-profiles.sh  terraform-validate.sh
config/: README.md  defaults.yaml
dashboard/: fetch-data.sh  index.html
docs/: FAQ.md  README.md  central-pipeline-provisioning.md  development-environment.md  environment-provisioning.md  full-region-provisioning.md  hostedcluster-provisioning.md
hack/: zoa.sh
personas/: api-designer.md  architect.md  dba.md  developer.md  orchestrator.md  platform-engineer.md  qa-engineer.md  security-engineer.md  tech-writer.md
scripts/: bootstrap-argocd.sh  bootstrap-central-account.sh  bootstrap-state.sh  (+9 more)
spec-to-pr/: .gitignore  CHANGELOG.md  Containerfile  Makefile  README.md  demo-validate-spec.md  pyproject.toml  run-spec.sh
spec-to-pr/src/spec_to_pr/: agent_runner.py  cli.py  orchestrator.py  personas.py  state_machine.py  storage.py
spec-to-pr/src/spec_to_pr/models/: __init__.py  circuit_breaker.py  phase_context.py  session.py  work_item.py
spec-to-pr/tests/: test_agent_runner.py  test_circuit_breaker.py  test_cli_validate.py  test_commit_and_pr.py  test_orchestrator.py  test_personas.py  test_project_docs.py  test_session_models.py  test_state_machine.py  test_storage.py  test_work_item.py
(+378 files in other folders)
